[package]
authors = ["Andrew Ealovega <Andrew@Ealovega.dev>"]
name = "phnx-throttle"
edition = "2021"
version = "0.1.0"

[features]
default = ['kalman']

# Outputs only voltage readings, not percent.
vol_out = []
# Enables kalman filter smooting
kalman = []

[workspace]
members = ["testsuite"]

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1.1"
cortex-m = "0.7"
systick-monotonic = "1.0.0"
bxcan = "0.7.0"

ukalman = "0.1.0"
phnx-candefs = { git = "https://github.com/ISC-Project-Phoenix/phnx-candefs.git" }

[dependencies.stm32f7xx-hal]
version = "0.7.0"
features = ["stm32f767", "rt", "rtic", "has-can"]
git = "https://github.com/andyblarblar/stm32f7xx-hal.git"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
